--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,9 @@
+:root{
+    --base: #ffc600;
+    --spacing: 10px;
+    --blur: 10px;
+}
+
 /*
             misc styles, nothing to do with CSS variables
           */
@@ -27,4 +33,12 @@
 
         img{
             border-radius: 50%;
+            padding: var(--spacing);
+            background: var(--base);
+            filter: blur(var(--blur));
+        }
+
+        .hl{
+            color:var(--base);
+
         }
